# ocm-impl

./: .gitignore  Cargo.toml  DEPLOYMENT.md  Dockerfile  Dockerfile.relay  LICENSE  README.md  docker-compose.yml  package-lock.json  package.json
docs/: API.md  DEPLOYMENT.md
ocm-core/: Cargo.toml
ocm-core/migrations/: V1__create_collective.sql  V2__create_signed_memory.sql  V3__create_claim_tokens.sql
ocm-core/src/: lib.rs  main.rs
ocm-core/src/config/: app.rs  logging.rs  mod.rs
ocm-core/src/core/: error.rs  models.rs
ocm-core/src/identity/: claims.rs  mod.rs  plc.rs  stub_plc.rs
ocm-core/src/networking/: discovery.rs  mod.rs  protocol.rs
ocm-core/src/persistence/: database.rs  migrations.rs  mod.rs
ocm-core/src/security/: auth.rs  middleware.rs  mod.rs  rate_limiting.rs  validation.rs
ocm-core/src/sync/: crdt.rs  manager.rs  mod.rs
ocm-wasm/: Cargo.toml  index.html
ocm-wasm/src/: crypto.rs  lib.rs  storage.rs  utils.rs  websocket.rs
relay-server/: Cargo.toml
relay-server/src/: main.rs
scripts/: setup-tls.sh
