[workspace]
members = ["ocm-core", "ocm-wasm", "relay-server"]
resolver = "2"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
hex = "0.4"
serde_json = "1.0"
base64 = "0.22"
ed25519-dalek = "2.0"
rand = "0.8"
bs58 = "0.5"
base32 = "0.4"
zeroize = { version = "1.7", features = ["zeroize_derive"] }
hmac = "0.12"
thiserror = "1.0"
anyhow = "1.0"

# Native-only dependencies
tokio = { version = "1.0", features = ["full"] }
refinery = { version = "0.8", features = ["rusqlite"] }
rusqlite = "0.31"
reqwest = { version = "0.11", features = ["json"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
config = "0.14"
url = "2.5"
did-method-plc = "0.1"
atproto-identity = "0.1"

# TLS and HTTP server dependencies
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "cors", "trace"] }
axum-server = { version = "0.8", features = ["tls-rustls"] }
rustls = { version = "0.23", features = ["ring"] }
rustls-pemfile = "2.1"
tokio-rustls = "0.25"
rcgen = "0.12"

# Security and validation dependencies
validator = { version = "0.18", features = ["derive"] }
serde_valid = "0.24"
regex = "1.10"
once_cell = "1.19"
dashmap = "6.0"

# WASM-only dependencies
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = "0.3"
wasm-bindgen-futures = "0.4"
console_error_panic_hook = "0.1"