[package]
name = "ocm-core"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "migrate"
path = "src/bin/migrate.rs"

[[bin]]
name = "web-server"
path = "src/bin/web_server.rs"

[dependencies]
serde = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
serde_json = { workspace = true }
base64 = { workspace = true }
ed25519-dalek = { workspace = true }
rand = { workspace = true }
bs58 = { workspace = true }
base32 = { workspace = true }
zeroize = { workspace = true }
hmac = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }

# Native-only dependencies (conditional)
tokio = { workspace = true, optional = true }
refinery = { workspace = true, optional = true }
rusqlite = { workspace = true, optional = true }
reqwest = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }
tracing-subscriber = { workspace = true, optional = true }
config = { workspace = true, optional = true }
url = { workspace = true, optional = true }
did-method-plc = { workspace = true, optional = true }
atproto-identity = { workspace = true, optional = true }

[features]
default = ["native"]
native = [
    "tokio",
    "refinery", 
    "rusqlite",
    "reqwest",
    "tracing",
    "tracing-subscriber",
    "config",
    "url",
    "did-method-plc",
    "atproto-identity"
]