[package]
name = "ocm-core"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ocm-core"
path = "src/main.rs"

[[bin]]
name = "migrate"
path = "src/bin/migrate.rs"

[[bin]]
name = "web-server"
path = "src/bin/web_server.rs"

[[bin]]
name = "secure-web-server"
path = "src/bin/secure_web_server.rs"

[dependencies]
serde = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
serde_json = { workspace = true }
base64 = { workspace = true }
ed25519-dalek = { workspace = true }
rand = { workspace = true }
bs58 = { workspace = true }
base32 = { workspace = true }
zeroize = { workspace = true }
hmac = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }

# Native-only dependencies (conditional)
tokio = { workspace = true, optional = true }
refinery = { workspace = true, optional = true }
rusqlite = { workspace = true, optional = true }
reqwest = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }
tracing-subscriber = { workspace = true, optional = true }
config = { workspace = true, optional = true }
url = { workspace = true, optional = true }
did-method-plc = { workspace = true, optional = true }
atproto-identity = { workspace = true, optional = true }

# TLS and HTTP server dependencies
axum = { workspace = true, optional = true }
tower = { workspace = true, optional = true }
tower-http = { workspace = true, optional = true }
axum-server = { workspace = true, optional = true }
rustls = { workspace = true, optional = true }
rustls-pemfile = { workspace = true, optional = true }
tokio-rustls = { workspace = true, optional = true }
rcgen = { workspace = true, optional = true }

# Security and validation dependencies
validator = { workspace = true, optional = true }
serde_valid = { workspace = true, optional = true }
regex = { workspace = true, optional = true }
once_cell = { workspace = true, optional = true }
dashmap = { workspace = true, optional = true }

[features]
default = ["native"]
native = [
    "tokio",
    "refinery", 
    "rusqlite",
    "reqwest",
    "tracing",
    "tracing-subscriber",
    "config",
    "url",
    "did-method-plc",
    "atproto-identity",
    "axum",
    "tower",
    "tower-http",
    "axum-server",
    "rustls",
    "rustls-pemfile",
    "tokio-rustls",
    "rcgen",
    "validator",
    "serde_valid",
    "regex",
    "once_cell",
    "dashmap"
]