[package]
name = "ocm-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
ocm-core = { path = "../ocm-core", default-features = false }

# WASM-specific dependencies
wasm-bindgen = "0.2"
js-sys = "0.3"
wasm-bindgen-futures = "0.4"
console_error_panic_hook = { version = "0.1", optional = true }
serde-wasm-bindgen = "0.6"
thiserror = "1.0"

# Core dependencies needed for WASM
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "js"] }
chrono = { version = "0.4", features = ["wasm-bindgen"] }
sha2 = "0.10"
hex = "0.4"
base64 = "0.22"
ed25519-dalek = "2.0"
rand = "0.8"
getrandom = { version = "0.2", features = ["js"] }
bs58 = "0.5"
base32 = "0.4"
zeroize = { version = "1.7", features = ["zeroize_derive"] }
hmac = "0.12"

# SQLite for WASM - we'll use sql.js via JS bindings

[features]
default = []
console_error_panic_hook = ["dep:console_error_panic_hook"]

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
  "Window",
  "Document",
  "Element",
  "HtmlElement",
  "Storage",
  "WebSocket",
  "MessageEvent",
  "CloseEvent",
  "ErrorEvent",
  # OPFS (Origin Private File System) features
  "StorageManager", 
  "FileSystemDirectoryHandle",
  "FileSystemFileHandle",
  "FileSystemWritableFileStream",
  "Navigator",
  "File",
  "FileReader",
  "Blob",
  "BlobPropertyBag",
  "Event",
  "EventTarget",
  "WorkerGlobalScope",
  # WebCrypto API features
  "Crypto",
  "SubtleCrypto", 
  "CryptoKey",
  "CryptoKeyPair",
  # IndexedDB features
  "IdbDatabase",
  "IdbTransaction",
  "IdbObjectStore",
  "IdbRequest",
  "IdbOpenDbRequest",
  # Location API
  "Location",
]